--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
- # Node.js dependencies
-/node_modules
-npm-debug.log
-yarn-error.log
+ # Dependencies
+node_modules/
 
 # Environment variables
 .env
@@ -10,18 +8,17 @@ yarn-error.log
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# OS-generated files
+# OS files
 .DS_Store
 Thumbs.db
 
-# IDE/editor settings
+# IDE files
 .vscode/
 .idea/
 *.swp
+*.swo
 
-# Build outputs (if you later add bundlers)
+# Build files
 dist/
 build/
