--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
     "name": "cse-motors",
     "version": "1.0.0",
-    "description": "CSE Motors Car Dealership Website - Assignment 1",
+    "description": "CSE Motors vehicle inventory application",
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js"
     },
-    "keywords": [],
+    "keywords": [
+        "node",
+        "express",
+        "ejs",
+        "inventory"
+    ],
     "author": "Your Name",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^16.0.3",
         "ejs": "^3.1.9",
-        "express": "^4.19.2"
+        "express": "^4.18.2",
+        "express-ejs-layouts": "^2.5.1",
+        "pg": "^8.11.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.0"
+        "nodemon": "^2.0.22"
     }
 }
